...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aYp-f5-UPc">
                                <rect key="frame" x="20" y="401" width="353" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="CalculatorButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="TDa-k1-wa6"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Calculator"/>
                                <connections>
...
                        <subviews>
                            <stackView opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="nWT-5x-hp4">
                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8aX-Ow-fXK">
                                        <rect key="frame" x="0.0" y="0.0" width="393" height="141.33333333333334"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ResultLabel"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="wxt-4r-TcG">
                                        <rect key="frame" x="0.0" y="142.33333333333334" width="393" height="141.00000000000003"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0hm-9d-CNV">
                                                <rect key="frame" x="0.0" y="0.0" width="97.666666666666671" height="141"/>
                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" identifier="AC"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="filled" title="AC" cornerStyle="small">
                                                    <fontDescription key="titleFontDescription" type="system" pointSize="40"/>
                                                    <color key="baseBackgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </buttonConfiguration>
                                                <connections>
                                                    <action selector="equalButtonTapped:" destination="9Wt-VX-mqY" eventType="touchUpInside" id="d6w-r8-la0"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uhi-SC-LeJ">
                                                <rect key="frame" x="98.666666666666686" y="0.0" width="97.333333333333314" height="141"/>
                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" identifier="+/-"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="filled" title="+/-" cornerStyle="small">
                                                    <fontDescription key="titleFontDescription" type="system" pointSize="40"/>
                                                    <color key="baseBackgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </buttonConfiguration>
                                                <connections>
...
